--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
+    margin: 0 auto;
+    margin-top: 50px;
 }
 .container {
     background-color: white;
